@@ -106,16 +106,8 @@ public class CBCBuilderTransformers {
 			.blockstate((c, p) -> p.directionalBlock(c.get(), p.models().withExistingParent(c.getName(), model)
 				.texture("side", sideLoc)
 				.texture("end", endLoc)
-				.texture("particle", sideLoc)));
-	}
-
-	public static <T extends Block, P> NonNullUnaryOperator<BlockBuilder<T, P>> sizedCannon(String model, String pathAndMaterial) {
-		ResourceLocation baseLoc = CreateBigCannons.resource("block/" + model);
-		ResourceLocation tubeLoc = CreateBigCannons.resource("block/" + pathAndMaterial + "_cannon_tube");
-		return b -> b.properties(p -> p.noOcclusion())
-			.addLayer(() -> RenderType::cutoutMipped)
-			.blockstate((c, p) -> p.directionalBlock(c.get(), p.models().withExistingParent(c.getName(), baseLoc)
-				.texture("tube", tubeLoc)));
+				.texture("particle", sideLoc)))
+			.tag(AllBlockTags.SAFE_NBT.tag);
 	}
 
 	public static <T extends Block, P> NonNullUnaryOperator<BlockBuilder<T, P>> sizedHollowCannon(String sizePath, String pathAndMaterial) {
@@ -124,7 +116,8 @@ public class CBCBuilderTransformers {
 		return b -> b.properties(p -> p.noOcclusion())
 			.addLayer(() -> RenderType::cutoutMipped)
 			.blockstate((c, p) -> p.directionalBlock(c.get(), p.models().withExistingParent(c.getName(), baseLoc)
-				.texture("tube", tubeLoc)));
+				.texture("tube", tubeLoc)))
+			.tag(AllBlockTags.SAFE_NBT.tag);
 	}
 
 	public static <T extends Block, P> NonNullUnaryOperator<BlockBuilder<T, P>> cannonEnd(String pathAndMaterial) {
@@ -140,7 +133,8 @@ public class CBCBuilderTransformers {
 				.texture("top", topLoc)
 				.texture("bottom", bottomLoc)
 				.texture("knob", knobLoc)
-				.texture("particle", topLoc)));
+				.texture("particle", topLoc)))
+			.tag(AllBlockTags.SAFE_NBT.tag);
 	}
 
 	public static <T extends Block, P> NonNullUnaryOperator<BlockBuilder<T, P>> dropMortarEnd(String pathAndMaterial) {
@@ -158,7 +152,8 @@ public class CBCBuilderTransformers {
 				.texture("top", topLoc)
 				.texture("bottom", bottomLoc)
 				.texture("knob", knobLoc)
-				.texture("particle", topLoc)));
+				.texture("particle", topLoc)))
+			.tag(AllBlockTags.SAFE_NBT.tag);
 	}
 
 	public static <T extends Block & BigCannonBlock, P> NonNullUnaryOperator<BlockBuilder<T, P>> slidingBreech(String pathAndMaterial) {
@@ -174,6 +169,7 @@ public class CBCBuilderTransformers {
 		return b -> b.properties(p -> p.noOcclusion())
 			.addLayer(() -> RenderType::cutoutMipped)
 			.blockstate(new SlidingBreechBlockGen(pathAndMaterial)::generate)
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.item(BigCannonBlockItem::new)
 			.model((c, p) -> p.getBuilder(c.getName()).parent(p.getExistingFile(itemBaseLoc))
 				.texture("hole", holeLoc)
@@ -190,13 +186,15 @@ public class CBCBuilderTransformers {
 	public static <T extends Block, P> NonNullUnaryOperator<BlockBuilder<T, P>> slidingBreechUnbored(String pathAndMaterial) {
 		return b -> b.properties(p -> p.noOcclusion())
 			.addLayer(() -> RenderType::cutoutMipped)
-			.blockstate(new SlidingBreechBlockGen(pathAndMaterial)::generate);
+			.blockstate(new SlidingBreechBlockGen(pathAndMaterial)::generate)
+			.tag(AllBlockTags.SAFE_NBT.tag);
 	}
 
 	public static <T extends Block, P> NonNullUnaryOperator<BlockBuilder<T, P>> slidingBreechIncomplete(String pathAndMaterial) {
 		return b -> b.properties(p -> p.noOcclusion())
 			.addLayer(() -> RenderType::cutoutMipped)
-			.blockstate(new IncompleteSlidingBreechBlockGen(pathAndMaterial)::generate);
+			.blockstate(new IncompleteSlidingBreechBlockGen(pathAndMaterial)::generate)
+			.tag(AllBlockTags.SAFE_NBT.tag);
 	}
 
 	public static <T extends Block & BigCannonBlock, P> NonNullUnaryOperator<BlockBuilder<T, P>> screwBreech(String pathAndMaterial) {
@@ -213,6 +211,7 @@ public class CBCBuilderTransformers {
 				.texture("top", topLoc)
 				.texture("bottom", bottomLoc)
 				.texture("particle", topLoc)))
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.item(BigCannonBlockItem::new)
 			.model((c, p) -> p.getBuilder(c.getName()).parent(p.getExistingFile(itemBaseLoc))
 				.texture("side", sideLoc)
@@ -235,6 +234,7 @@ public class CBCBuilderTransformers {
 				.texture("top", topLoc)
 				.texture("bottom", bottomLoc)
 				.texture("particle", topLoc)))
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.item(BigCannonBlockItem::new)
 			.model((c, p) -> p.getBuilder(c.getName()).parent(p.getExistingFile(itemBaseLoc))
 				.texture("side", sideLoc)
@@ -246,7 +246,8 @@ public class CBCBuilderTransformers {
 	public static <T extends Block, P> NonNullUnaryOperator<BlockBuilder<T, P>> screwBreechIncomplete(String pathAndMaterial) {
 		return b -> b.properties(p -> p.noOcclusion())
 			.addLayer(() -> RenderType::cutoutMipped)
-			.blockstate(new IncompleteScrewBreechBlockGen(pathAndMaterial)::generate);
+			.blockstate(new IncompleteScrewBreechBlockGen(pathAndMaterial)::generate)
+			.tag(AllBlockTags.SAFE_NBT.tag);
 	}
 
 	public static <T extends Item, P> NonNullUnaryOperator<ItemBuilder<T, P>> screwLock(String pathAndMaterial) {
@@ -270,6 +271,7 @@ public class CBCBuilderTransformers {
 				};
 				return p.models().withExistingParent(name, loc).texture("material", texLoc);
 			}))
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.item(AutocannonBlockItem::new)
 			.model((c, p) -> p.withExistingParent(c.getName(), CreateBigCannons.resource("block/autocannon/barrel")).texture("material", texLoc))
 			.build();
@@ -288,7 +290,8 @@ public class CBCBuilderTransformers {
 					return p.models().withExistingParent(handle ? c.getName() + "_handle" : c.getName(), handle ? handleLoc : baseLoc)
 						.texture("material", texLoc)
 						.texture("handle", tex1Loc);
-				}));
+				}))
+			.tag(AllBlockTags.SAFE_NBT.tag);
 		if (complete) {
 			result = result.andThen(b -> b.item(AutocannonBlockItem::new)
 				.model((c, p) -> p.withExistingParent(c.getName(), CreateBigCannons.resource("block/autocannon/breech_item")).texture("material", texLoc))
@@ -306,7 +309,8 @@ public class CBCBuilderTransformers {
 		NonNullUnaryOperator<BlockBuilder<T, P>> result = b -> b.properties(p -> p.noOcclusion())
 			.addLayer(() -> RenderType::cutoutMipped)
 			.blockstate((c, p) -> BlockStateGen.directionalBlockIgnoresWaterlogged(c, p,
-				$ -> p.models().withExistingParent(c.getName(), CreateBigCannons.resource("block/autocannon/recoil_spring")).texture("material", texLoc)));
+				$ -> p.models().withExistingParent(c.getName(), CreateBigCannons.resource("block/autocannon/recoil_spring")).texture("material", texLoc)))
+			.tag(AllBlockTags.SAFE_NBT.tag);
 		if (complete) {
 			result = result.andThen(b -> b.item(AutocannonBlockItem::new)
 				.model((c, p) -> p.withExistingParent(c.getName(), CreateBigCannons.resource("block/autocannon/recoil_spring_item")).texture("material", texLoc))
@@ -344,6 +348,7 @@ public class CBCBuilderTransformers {
 				$ -> p.models().withExistingParent(c.getName(), model)
 					.texture("material", tex)
 					.texture("material1", tex1)))
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.item(AutocannonBlockItem::new)
 			.model((c, p) -> p.blockItem(c))
 			.build();
@@ -371,6 +376,7 @@ public class CBCBuilderTransformers {
 		return b -> b.properties(p -> p.noOcclusion())
 			.addLayer(() -> RenderType::cutoutMipped)
 			.blockstate(new CannonLoaderGen()::generate)
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.item()
 			.model((c, p) -> {})
 			.build();
@@ -380,6 +386,7 @@ public class CBCBuilderTransformers {
 		return b -> b.properties(p -> p.noOcclusion())
 			.addLayer(() -> RenderType::cutoutMipped)
 			.blockstate(new CannonDrillGen()::generate)
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.item()
 			.model((c, p) -> {})
 			.build();
@@ -396,6 +403,7 @@ public class CBCBuilderTransformers {
 		return b -> b.properties(p -> p.noOcclusion())
 			.addLayer(() -> RenderType::cutoutMipped)
 			.blockstate(new CannonBuilderGen()::generate)
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.item()
 			.model((c, p) -> {})
 			.build();
@@ -499,6 +507,7 @@ public class CBCBuilderTransformers {
 						.apply(CopyNameFunction.copyName(CopyNameFunction.NameSource.BLOCK_ENTITY)))
 						.apply(func)));
 			})
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.item(AutocannonAmmoContainerItem::new)
 			.properties(p -> p.stacksTo(1))
 			.properties(p -> isCreative ? p.rarity(Rarity.EPIC) : p)
@@ -512,6 +521,7 @@ public class CBCBuilderTransformers {
 		return b -> b.properties(p -> p.noOcclusion())
 			.addLayer(() -> RenderType::cutoutMipped)
 			.blockstate((c, p) -> p.horizontalBlock(c.get(), p.models().getExistingFile(baseLoc), 0))
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.item()
 			.model((c, p) -> {})
 			.build();
@@ -522,6 +532,7 @@ public class CBCBuilderTransformers {
 		return b -> b.properties(p -> p.noOcclusion())
 			.addLayer(() -> RenderType::cutoutMipped)
 			.blockstate((c, p) -> p.simpleBlock(c.get(), p.models().getExistingFile(baseLoc)))
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.item()
 			.model((c, p) -> {})
 			.build();
@@ -573,6 +584,7 @@ public class CBCBuilderTransformers {
 			.properties(p -> p.sound(SoundType.WOOD))
 			.properties(p -> p.noOcclusion())
 			.tag(BlockTags.MINEABLE_WITH_AXE)
+			.tag(AllBlockTags.SAFE_NBT.tag)
 			.addLayer(() -> RenderType::solid)
 			.blockstate((c, p) -> p.getMultipartBuilder(c.get())
 				.part()
